Updated photo and CSS

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div>
-            <img class="my-pic" src="assets\IMG-20251124-WA0018.jpg" alt="me">
+            <img class="my-pic" src="assets\WhatsApp Image 2026-01-28 at 21.36.32.jpeg" alt="me">
         </div>
     </section>
 
