Added new photos and content

--- a/index.html
+++ b/index.html
@@ -136,14 +136,17 @@
         <section class="contact_section">
             <h2 id="contact_sub_topic"> Reach me directly </h2>
             <div>
-                <div class="contact_cards"> <img class="contact_img"
-                        src="assets\E-mail Mail Letter Green Logo Icon.jpeg" alt="E-mail">
+                <div class="contact_cards"> <img class="contact_img" src="assets\Gmail 195.jpeg">
                     dmkrashmidasanayaka@gmail.com </div>
-                <div class="contact_cards"> <img class="contact_img" src="assets\Whatsapp Logo png.jpeg"
-                        alt="wtssp">070-3075961</div>
-                <div class="contact_cards"> <img class="contact_img" src="assets\Logo telefone png (1).jpeg" alt="call">
-                    070-3075961
+                <div class="contact_cards"> <img class="contact_img"
+                        src="assets\Download Whatsapp logo png, Whatsapp icon png, Whatsapp transparent.jpeg">070-3075961
                 </div>
+                <div class="contact_cards"> <img class="contact_img"
+                        src="assets\Baixar logotipo do instagram png, ícone do instagram transparente.jpeg">dasny_k
+                </div>
+                <div class="contact_cards"><img class="contact_img"
+                        src="assets\Facebook Logo Icon Vector & Transparent PNG.jpeg"> Rashmi Dasanayaka</div>
+            </div>
             </div>
         </section>
     </main>
