Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -138,14 +138,13 @@
             <div>
                 <div class="contact_cards"> <img class="contact_img" src="assets\Gmail 195.jpeg">
                     dmkrashmidasanayaka@gmail.com </div>
-                <div class="contact_cards"> <img class="contact_img"
+                <div class="contact_cards"></a><img class="contact_img"
                         src="assets\Download Whatsapp logo png, Whatsapp icon png, Whatsapp transparent.jpeg">070-3075961
                 </div>
                 <div class="contact_cards"> <img class="contact_img"
-                        src="assets\Baixar logotipo do instagram png, ícone do instagram transparente.jpeg">dasny_k
-                </div>
-                <div class="contact_cards"><img class="contact_img"
-                        src="assets\Facebook Logo Icon Vector & Transparent PNG.jpeg"> Rashmi Dasanayaka</div>
+                        src="assets\Baixar logotipo do instagram png, ícone do instagram transparente.jpeg">dasny_k </div>
+                <div class="contact_cards"> <img class="contact_img"
+                        src="assets\Facebook Logo Icon Vector & Transparent PNG.jpeg">  Rashmi Dasanayaka </div>
             </div>
             </div>
         </section>
