Added new photos and content

--- a/index.html
+++ b/index.html
@@ -19,111 +19,131 @@
                 <li> <a href="#home_main">Home</a> </li>
                 <li> <a href="#about_main">About</a> </li>
                 <li> <a href="#interest_main">My interests</a> </li>
+                <li> <a href="#gallery_main"> Gallery </a></li>
             </ul>
         </div>
     </header>
 
     <!-- Home page -->
-    <main id="home_main"></main>
-    <section class="homepage_section">
-        <div>
-            <h1 id="name"><b> Hi , I'm Rashmi <br> Dasanayaka</b> 👋🏻 </h1>
-            <br>
-            <h2 id="intro">Learning Software Engineer</h2>
-            <br>
-            <h3 id="points">Building skills • Exploring tech • Growing every day</h3>
+    <main id="home_main">
+        <section class="homepage_section">
+            <div>
+                <h1 id="name"><b> Hi , I'm Rashmi <br> Dasanayaka</b> 👋🏻 </h1>
+                <br>
+                <h2 id="intro">Learning Software Engineer</h2>
+                <br>
+                <h3 id="points">Building skills • Exploring tech • Growing every day</h3>
 
-            <button class="homepage_button"> <a href="#contact_main"> Contact </a></button>
-            <button class="homepage_button"> <a href="#skills_main">skills</a> </button>
-        </div>
+                <button class="homepage_button"> <a href="#contact_main"> Contact </a></button>
+                <button class="homepage_button"> <a href="#skills_main">skills</a> </button>
+            </div>
 
-        <div>
-            <img class="my-pic" src="assets\WhatsApp Image 2026-01-28 at 21.36.32.jpeg" alt="me">
-        </div>
-    </section>
+            <div>
+                <img class="my-pic" src="assets\WhatsApp Image 2026-02-04 at 21.47.09.jpeg" alt="me">
+            </div>
+        </section>
+    </main>
+
 
     <!-- About me -->
-    <main id="about_main"></main>
-    <section class="about_section">
-        <div>
+    <main id="about_main">
+        <section class="about_section">
             <div>
-                <h1 class="main_topics">About me</h1>
-                <div class="divider"></div>
-                <h3 id="se">° An aspiring software engineer in Sri Lanka °</h3>
+                <div>
+                    <h1 class="main_topics">About me</h1>
+                    <div class="divider"></div>
+                    <h3 id="se">° An aspiring software engineer in Sri Lanka °</h3>
+                </div>
+                <div>
+                    <h3>I'm a passionate learner diving into the world of software development. I love exploring new
+                        technologies, solving problems, and building meaningful projects while dreaming big.</h3>
+                    <h3>I started my coding journey with HTML & CSS and slowly moved
+                        into JavAScript. Every day, I'm learning, improving, and
+                        pushing myself to grow .</h3>
+                </div>
             </div>
-            <div>
-                <h3>I'm a passionate learner diving into the world of software development. I love exploring new
-                    technologies, solving problems, and building meaningful projects while dreaming big.</h3>
-                <h3>I started my coding journey with HTML & CSS and slowly moved
-                    into JavAScript. Every day, I'm learning, improving, and
-                    pushing myself to grow .</h3>
-            </div>
-        </div>
+        </section>
+    </main>
 
-    </section>
 
     <!-- My skills -->
-    <main id="skills_main"></main>
-    <div>
-        <h1 class="main_topics">My skills</h1>
-    </div>
-    <div class="divider"></div>
-    <section class="skills_section">
+    <main id="skills_main">
         <div>
-            <h3 class="skills_sub_topics">Front-end Development</h3>
-            <h4>
-                <div class="box_skills box1">HTML</div>
-                <div class="box_skills box2">CSS</div>
-                <div class="box_skills box3">JavaScript</div>
-            </h4>
+            <h1 class="main_topics">My skills</h1>
         </div>
+        <div class="divider"></div>
+        <section class="skills_section">
+            <div>
+                <h3 class="skills_sub_topics">Front-end Development</h3>
+                <h4>
+                    <div class="box_skills box1">HTML</div>
+                    <div class="box_skills box2">CSS</div>
+                    <div class="box_skills box3">JavaScript</div>
+                </h4>
+            </div>
 
-        <div>
-            <h3 class="skills_sub_topics">Back-end Development</h3>
-            <h4>
-                <div class="box_skills box1">Node.js</div>
-                <div class="box_skills box2">Express.js</div>
-                <div class="box_skills box3">SQL</div>
-            </h4>
-        </div>
-    </section>
-    <br>
+            <div>
+                <h3 class="skills_sub_topics">Back-end Development</h3>
+                <h4>
+                    <div class="box_skills box1">Node.js</div>
+                    <div class="box_skills box2">Express.js</div>
+                    <div class="box_skills box3">SQL</div>
+                </h4>
+            </div>
+        </section>
+    </main>
 
     <!-- My interest -->
-    <main id="interest_main"></main>
-    <div>
-        <h1 class="main_topics">My interests</h1>
-    </div>
-    <div class="divider"></div>
+    <main id="interest_main">
+        <div>
+            <h1 class="main_topics">My interests</h1>
+        </div>
+        <div class="divider"></div>
 
-    <section class="interest_section1">
-        <div class="box_interest box4">
-            <img class="interest_img" src="assets\software development icon design template.jpeg" alt="develop"> Web
-            development
-        </div>
-        <div class="box_interest box5">
-            <img class="interest_img"
-                src="assets\Download Coding icon_ Trendy flat vector Coding icon on white background, vector illustration can be use for web and mobile for free.jpeg"
-                alt="coding"> Creative coding
-        </div>
-        <div class="box_interest box6">
-            <img class="interest_img" src="assets\Premium vector illustration of a pen tool symbol_.jpeg" alt="grapgic">
-            Graphic designing
-        </div>
-    </section>
+        <section class="interest_section1">
+            <div class="box_interest box4">
+                <img class="interest_img" src="assets\software development icon design template.jpeg" alt="develop"> Web
+                development
+            </div>
+            <div class="box_interest box5">
+                <img class="interest_img"
+                    src="assets\Download Coding icon_ Trendy flat vector Coding icon on white background, vector illustration can be use for web and mobile for free.jpeg"
+                    alt="coding"> Creative coding
+            </div>
+            <div class="box_interest box6">
+                <img class="interest_img" src="assets\Premium vector illustration of a pen tool symbol_.jpeg"
+                    alt="grapgic">
+                Graphic designing
+            </div>
+        </section>
 
-    <section class="interest_section2">
-        <div class="box_interest box7">
-            <img class="interest_img" src="assets\download (13).jpeg" alt="blogging"> Blogging
+        <section class="interest_section2">
+            <div class="box_interest box7">
+                <img class="interest_img" src="assets\download (13).jpeg" alt="blogging"> Blogging
+            </div>
+            <div class="box_interest box8">
+                <img class="interest_img" src="assets\download (14).jpeg" alt="photography"> Photography
+            </div>
+            <div class="box_interest box9">
+                <img class="interest_img" src="assets\Download Music note logo Vector template for free.jpeg"
+                    alt="music">
+                Music
+            </div>
+        </section>
+    </main>
+
+
+    <!-- Gallery -->
+    <main id="gallery_main">
+        <div>
+            <h1 class="main_topics"> My gallery</h1>
         </div>
-        <div class="box_interest box8">
-            <img class="interest_img" src="assets\download (14).jpeg" alt="photography"> Photography
-        </div>
-        <div class="box_interest box9">
-            <img class="interest_img" src="assets\Download Music note logo Vector template for free.jpeg" alt="music">
-            Music
-        </div>
-    </section>
+        <div class="devider"></div>
+        <section class="gallery_section">
+
+        </section>
+    </main>
+
 
     <!-- Contacts -->
     <main id="contact_main">
@@ -142,9 +162,10 @@
                         src="assets\Download Whatsapp logo png, Whatsapp icon png, Whatsapp transparent.jpeg">070-3075961
                 </div>
                 <div class="contact_cards"> <img class="contact_img"
-                        src="assets\Baixar logotipo do instagram png, ícone do instagram transparente.jpeg">dasny_k </div>
+                        src="assets\Baixar logotipo do instagram png, ícone do instagram transparente.jpeg">dasny_k
+                </div>
                 <div class="contact_cards"> <img class="contact_img"
-                        src="assets\Facebook Logo Icon Vector & Transparent PNG.jpeg">  Rashmi Dasanayaka </div>
+                        src="assets\Facebook Logo Icon Vector & Transparent PNG.jpeg"> Rashmi Dasanayaka </div>
             </div>
             </div>
         </section>
