Added new photos and content

--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
         <div>
             <h1 class="main_topics"> My gallery</h1>
         </div>
-        <div class="devider"></div>
-        <section class="gallery_section">
+        <div class="divider"></div>
 
+        </section>
+        <img class="gallery_img" src="assets/WhatsApp Image 2026-02-05 at 20.36.49.jpeg" alt="gallery">
         </section>
     </main>
 
